--- a/app/src/main/res/layout/adapter_timeline_view.xml
+++ b/app/src/main/res/layout/adapter_timeline_view.xml
@@ -2,8 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    >
 
     <com.tcqq.timelineview.TimelineView
         android:id="@+id/timeline"
@@ -13,7 +16,7 @@
         app:timeline_line_width="3dp"
         app:timeline_marker="@drawable/milestones_marker"
         app:timeline_marker_padding_bottom="44dp"
-        app:timeline_marker_size="15dp"
+        app:timeline_marker_size="20dp"
         app:timeline_start_line_color="@color/gray" />
 
     <LinearLayout
